--- a/DepartmentsWeb/Views/Home/Departments.cshtml
+++ b/DepartmentsWeb/Views/Home/Departments.cshtml
@@ -13,7 +13,7 @@
         </div>
         <div class="col">
             <div class="col text-end pt-1">
-                <a asp-action="" class="btn btn-outline-primary"><i class="fas fa-plus"> Синхранизировать</i></a>
+                <a asp-action="" class="btn btn-outline-primary"><i class="fas fa-plus"> Синхронизировать</i></a>
             </div>
         </div>
     </div>
