--- a/DepartmentsWeb/Views/Home/Index.cshtml
+++ b/DepartmentsWeb/Views/Home/Index.cshtml
@@ -2,6 +2,39 @@
     ViewData["Title"] = "Home Page";
 }
 
-@model IEnumerable<DepartmentsWeb.Models.Dto.DepartmentDto>
-
+@model DepartmentsWeb.Models.Dto.DepartmentsListDto
+@* @Html.Partial("_TreeList", Model) *@
+<br />
+<br />
+<br />
+<br />
+<div class="container p-4 border">
+    <div class="row pb-2">
+        <div class="col">
+            <h1 class="text-primary">Структура подразделений</h1>
+        </div>
+        <div class="col">
+            <div class="col text-end pt-1">
+                <a asp-action="" class="btn btn-outline-primary"><i class="fas fa-plus"> Синхронизировать</i></a>
+            </div>
+        </div>
+    </div>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    Наименование
+                </th>
+                <th>
+                    Статус
+                </th>
+                <th>
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @Html.Partial("_TreeList", Model)
+        </tbody>
+    </table>
+</div>
 
