--- a/DepartmentsWeb/Views/Home/Index.cshtml
+++ b/DepartmentsWeb/Views/Home/Index.cshtml
@@ -6,35 +6,29 @@
 @* @Html.Partial("_TreeList", Model) *@
 <br />
 <br />
-<br />
-<br />
 <div class="container p-4 border">
     <div class="row pb-2">
         <div class="col">
             <h1 class="text-primary">Структура подразделений</h1>
         </div>
-        <div class="col">
-            <div class="col text-end pt-1">
-                <a asp-action="" class="btn btn-outline-primary"><i class="fas fa-plus"> Синхронизировать</i></a>
-            </div>
-        </div>
     </div>
     <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    Наименование
-                </th>
-                <th>
-                    Статус
-                </th>
-                <th>
-                </th>
-            </tr>
-        </thead>
         <tbody>
             @Html.Partial("_TreeList", Model)
         </tbody>
     </table>
+
+    <div class="col-sm-4">
+        <form asp-action="Synchronize" enctype="multipart/form-data">
+            <input type="hidden" name="Synchronize" />
+            @Html.AntiForgeryToken()
+            <p>
+                <input type="file" name="file" />
+            </p>
+            <div class="col text-end pt-1">
+                <button class="btn btn-outline-primary"><i class="fas fa-plus">Синхронизация данных</i></button>
+            </div>
+        </form>
+    </div>
 </div>
 
