--- a/DepartmentsWeb/Views/Home/Index.cshtml
+++ b/DepartmentsWeb/Views/Home/Index.cshtml
@@ -6,10 +6,21 @@
 @* @Html.Partial("_TreeList", Model) *@
 <br />
 <br />
-<div class="container p-4 border">
-    <div class="row pb-2">
+<div class="container p-4 border ">
+    <div class="row pb-2 align-items-center">
         <div class="col">
-            <h1 class="text-primary">Структура подразделений</h1>
+            <h2 class="text-primary">Структура подразделений</h2>
+        </div>
+        <div class="col">
+            <form asp-action="Index" class="row g-3">
+                <div class="col-auto">
+                    <label for="searchFilter" class="visually-hidden">Наименование</label>
+                    <input type="text" class="form-control" id="searchFilter" name="SearchString" placeholder="Наименование">
+                </div>
+                <div class="col-auto ">
+                    <button type="submit" class="btn btn-outline-primary">Поиск</button>
+                </div>
+            </form>
         </div>
     </div>
     <table class="table">
@@ -18,17 +29,17 @@
         </tbody>
     </table>
 
-    <div class="col-sm-4">
+    <div>
         <form asp-action="Synchronize" enctype="multipart/form-data">
             <input type="hidden" name="Synchronize" />
             @Html.AntiForgeryToken()
-            <p>
-                <input type="file" name="file" />
-            </p>
-            <div class="col text-end pt-1">
-                <button class="btn btn-outline-primary"><i class="fas fa-plus">Синхронизация данных</i></button>
+            <div class="mb-3">
+                <input class="form-control" type="file" id="formFile" name="file">
+            </div>
+            <div class="col pt-1">
+                <button class="btn btn-outline-primary">Синхронизация данных</button>
             </div>
         </form>
-    </div>
+    </div>    
 </div>
 
