refactor: Изменены стили древовидного списка

--- a/DepartmentsWeb/Views/Home/Departments.cshtml
+++ b/DepartmentsWeb/Views/Home/Departments.cshtml
@@ -62,7 +62,7 @@
                 <input class="form-control" type="file" id="formFile" name="file">
             </div>
             <div class="col pt-1">
-                <button class="btn btn-outline-primary"><i class="fas">Синхронизация данных</i></button>
+                <button class="btn btn-outline-primary">Синхронизация данных</button>
             </div>
         </form>
     </div>
