--- a/DepartmentsWeb/Views/Home/Index.cshtml
+++ b/DepartmentsWeb/Views/Home/Index.cshtml
@@ -23,11 +23,10 @@
             </form>
         </div>
     </div>
-    <table class="table">
-        <tbody>
-            @Html.Partial("_TreeList", Model)
-        </tbody>
-    </table>
+
+    <div class="margin_center">
+        @Html.Partial("_TreeList", Model)
+    </div>
 
     <div>
         <form asp-action="Synchronize" enctype="multipart/form-data">
