fix: исправлен поиск по структуре

--- a/DepartmentsWeb/Views/Home/Departments.cshtml
+++ b/DepartmentsWeb/Views/Home/Departments.cshtml
@@ -12,7 +12,7 @@
             <h2 class="text-primary">Список подразделений</h2>
         </div>
         <div class="col">
-            <form asp-action="Index" class="row g-3">
+            <form asp-action="Departments" class="row g-3">
                 <div class="col-auto">
                     <label for="searchFilter" class="visually-hidden">Наименование</label>
                     <input type="text" class="form-control" id="searchFilter" name="SearchString" placeholder="Наименование">
